feat(dependency): enhance dependency update strategy and dry run verification